fixes and updates

--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,3 +1,64 @@
-<p>
-  education works!
-</p>
+<div class="container">
+  <div class="row d-flex ">
+    <div class="col-sm-6">
+      <div class="card h-100">
+        <h3 class="card-header text-center white-text" style="background-color: #0a65a4;">Grand Valley State University</h3>
+        <div class="card-body">
+
+          <h5 class="card-title text-center">
+              School of Computing & Information Systems
+              <br>
+              2016 - Current
+            </h5>
+
+          <ul class="fa-ul">
+            <li>
+              <i class="fa fa-chevron-right"></i> Major: Information Systems</li>
+              <br>
+              <li>
+              
+              <i class="fa fa-chevron-right"></i> Minor: Business</li>
+              <br>
+            <li>
+              <i class="fa fa-chevron-right"></i> GPA: 3.2</li>
+              <br>
+            <li>
+              <i class="fa fa-chevron-right"></i> School of Computer & Information Systems Dean's List for multiple semesters.</li>
+          </ul>
+        
+          
+        </div>
+        <div class="card-footer">        
+        <a class="btn form-control primary-color " href="https://www.gvsu.edu" taget="_blank">GVSU Website</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-sm-6">
+      <div class="card h-100 ">
+        <h3 class="card-header text-center black white-text">Oakland University</h3>
+        <div class="card-body">
+
+          <h5 class="card-title text-center">
+            Bachelor of Science
+            <br>
+            2014 - 2016
+          </h5>
+          <ul class="fa-ul">
+            <li>
+              <i class="fa fa-chevron-right"></i> Major: Information Systems</li>
+            <br>
+          
+            <li>
+              <i class="fa fa-chevron-right"></i> GPA: 3.26</li>
+          </ul>
+        
+            
+        </div>
+        <div class="card-footer">
+        <a class="btn form-control elegant-color " href="https://www.gvsu.edu" target="_blank">Oakland University Website</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
