--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,61 @@
 <div class="container">
-<nav class="navbar fixed-top navbar-expand-sm navbar-dark elegant-color-dark animated fadeInDown ">
+  <nav class="navbar fixed-top navbar-expand-sm navbar-dark elegant-color-dark animated fadeInDown ">
     <a class="navbar-brand" href="">Nicholas Glenn</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item"  routerLinkActive="active">
-                <a class="nav-link" routerLink="/about">Home</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/education" ><i class="fa fa-graduation-cap"></i> Education</a>
-            </li>
-            <li class="nav-item"  routerLinkActive="active">
-                <a class="nav-link" routerLink="/work"><i class="fa fa-briefcase"></i> Work Experience</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/skills" ><i class="fa fa-pencil"></i> Skills</a>
-            </li>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/about">Home</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/education">
+            <i class="fa fa-graduation-cap"></i> Education</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/work">
+            <i class="fa fa-briefcase"></i> Work Experience</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/skills">
+            <i class="fa fa-pencil"></i> Skills</a>
+        </li>
 
-        </ul>
-        <ul class="navbar-nav">
-            <li class="nav-item"  routerLinkActive="active">
-                <a class="nav-link" routerLink="/contact" ><i class="fa fa-address-book"></i> Contact</a>
-            </li>
-        </ul>
+      </ul>
+      <ul class="navbar-nav">
+        <li class="nav-item" style="padding-right:15px;">
+              <a class="nav-link" href="https://www.linkedin.com/in/nicholas-glenn-98b289106" target="_blank" >
+                <i class="fa fa-linkedin fa-2x lnpad white-text" aria-hidden="true"></i>
+              </a>
+        </li>
+        <li style="padding-right:15px;">
+          <a class="nav-link" href="mailto:glennn@mail.gvsu.edu" target="">
+            <i class="fa fa-envelope fa-2x lnpad white-text" aria-hidden="true"></i>
+          </a>
+        </li>
+          <li style="padding-right:0px;">
+          <a class="nav-link" href="https://github.com/nglenn8566" target="_blank">
+            <i class="fa fa-github fa-2x lnpad white-text" aria-hidden="true"></i>
+          </a>
+        </li>
+      </ul>
+
+      <!-- <ul class="navbar-nav">
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/contact">
+            <i class="fa fa-address-book"></i> Contact</a>
+        </li>
+      </ul> -->
     </div>
 
-</nav>
+  </nav>
 
-<!--/.Navbar-->
-<div class="routerPadding ">
-<router-outlet></router-outlet>
-</div>
+  <!--/.Navbar-->
+  <div class="routerPadding ">
+    <router-outlet></router-outlet>
+  </div>
 
 </div>
