added new layout style and added new images

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container black-text">
   <div class="row">
     <div class="col">
       <div class="jumbotron">
@@ -12,7 +12,7 @@
         <p class="signature">Nicholas Glenn</p>
       </h4>
       <br>
-      <h4>
+      <!-- <h4>
         <ul>
         <li>This website is supposed to be hosted on Amazon AWS EC2 servers using a Windows based server.</li>
         <br>
@@ -22,7 +22,7 @@
         <br>
         <li>Eventually this sites content will be managed using a seperate web application. This will allow me to add new content and change content without rewritting the code for the side.</li>
       </ul>
-     </h4>
+     </h4> -->
    </div>
     </div>
 </div>
