--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -3,7 +3,7 @@
     <div class="col-sm-6">
       <div class="card h-100">
         <h3 class="card-header text-center white-text" style="background-color: #0a65a4;">Grand Valley State University</h3>
-        <div class="card-body">
+        <div class="card-body black-text">
 
           <h5 class="card-title text-center">
               School of Computing & Information Systems
@@ -37,7 +37,7 @@
     <div class="col-sm-6">
       <div class="card h-100 ">
         <h3 class="card-header text-center black white-text">Oakland University</h3>
-        <div class="card-body">
+        <div class="card-body black-text">
 
           <h5 class="card-title text-center">
             Bachelor of Science
