addeed new animations to pages

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,8 +1,8 @@
 <div class="container black-text">
   <div class="row">
     <div class="col">
-      <div class="jumbotron">
-      <h1 class="text-center signature"><b> About This Site </b></h1>
+      <div class="jumbotron animated zoomIn">
+      <h1 class="text-center signature uppercase"><b> About This Site </b></h1>
       <br>
       <h4><b>Welcome!</b> This is a personal website project of mine that I work on in my spare time.
         Im always working on a modification to improve the sight in some way.
