--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row d-flex ">
-    <div class="col-sm-6">
-      <div class="card h-100">
+    <div class="col-sm-6 animated fadeInLeft">
+      <div class="card h-100 ">
         <h3 class="card-header text-center white-text" style="background-color: #0a65a4;">Grand Valley State University</h3>
         <div class="card-body black-text">
 
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="col-sm-6">
+    <div class="col-sm-6 animated fadeInRight">
       <div class="card h-100 ">
         <h3 class="card-header text-center black white-text">Oakland University</h3>
         <div class="card-body black-text">
