--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,131 +1,132 @@
 <div class="container ">
   <div class="row">
     <div class="col text-center">
-      <h1 class="text-center">
+      <h1 class="text-center animated fadeInDown">
         <b>Skills</b>
       </h1>
     </div>
   </div>
   <div class="row">
     <div class="col-md">
-      <div class="jumbotron black-text">
+      <div class="jumbotron black-text animated fadeInLeft">
         <div class="row">
           <div class="col-md">
             <ul>
               <li>
-                <h4 class="h4class">HTML5 and CSS</h4>
+                <h4 class="h4class hoverable">HTML5 and CSS</h4>
               </li>
               <li>
-                <h4 class="h4class">SharePoint</h4>
+                <h4 class="h4class hoverable">SharePoint</h4>
               </li>
               <li>
-                <h4 class="h4class">SAP</h4>
+                <h4 class="h4class hoverable">SAP</h4>
               </li>
               <li>
-                <h4 class="h4class">SAP UI 5</h4>
+                <h4 class="h4class hoverable">SAP UI 5</h4>
               </li>
               <li>
-                <h4 class="h4class">Bootstrap</h4>
+                <h4 class="h4class hoverable">Bootstrap</h4>
               </li>
               <li>
-                <h4 class="h4class">AngularJS V1, V5, V6</h4>
+                <h4 class="h4class hoverable">AngularJS V1, V5, V6</h4>
               </li>
               <li>
-                <h4 class="h4class">NodeJS</h4>
+                <h4 class="h4class hoverable">NodeJS</h4>
               </li>
               <li>
-                <h4 class="h4class">MongooseJS</h4>
+                <h4 class="h4class hoverable">MongooseJS</h4>
               </li>
               <li>
-                <h4 class="h4class">Express</h4>
+                <h4 class="h4class hoverable">Express</h4>
               </li>
               <li>
-                <h4 class="h4class">JavaScript</h4>
+                <h4 class="h4class hoverable">JavaScript</h4>
               </li>
               <li>
-                <h4 class="h4class">MongoDB</h4>
+                <h4 class="h4class hoverable">MongoDB</h4>
               </li>
               <li>
-                <h4 class="h4class">Amazon AWS EC2</h4>
+                <h4 class="h4class hoverable">Amazon AWS EC2</h4>
               </li>
               <li>
-                <h4 class="h4class">Windows server 2016</h4>
+                <h4 class="h4class hoverable">Windows server 2016</h4>
               </li>
               <li>
-                <h4 class="h4class">IIS</h4>
+                <h4 class="h4class hoverable">IIS</h4>
               </li>
               <li>
-                <h4 class="h4class">JAVA</h4>
+                <h4 class="h4class hoverable">JAVA</h4>
               </li>
               <li>
-                <h4 class="h4class">Over four years of Microsoft Visual Studio experience.</h4>
+                <h4 class="h4class hoverable">Over four years of Microsoft Visual Studio experience.</h4>
               </li>
               <li>
-                <h4 class="h4class">BitBucket</h4>
+                <h4 class="h4class hoverable">BitBucket</h4>
               </li>
               <li>
-                <h4 class="h4class">GitHub</h4>
+                <h4 class="h4class hoverable">GitHub</h4>
               </li>
               <li>
-                <h4 class="h4class">Engineering software including AutoCAD and CATIA.</h4>
+                <h4 class="h4class hoverable">Engineering software including AutoCAD and CATIA.</h4>
               </li>
               <li>
-                <h4 class="h4class">DBAN</h4>
+                <h4 class="h4class hoverable">DBAN</h4>
               </li>
 
               <li>
-                <h4 class="h4class">JAMF Software Casper Management Suite</h4>
+                <h4 class="h4class hoverable">JAMF Software Casper Management Suite</h4>
               </li>
               <li>
-                <h4 class="h4class">Code42 CrashPlan server based backup</h4>
+                <h4 class="h4class hoverable">Code42 CrashPlan server based backup</h4>
               </li>
               <li>
-                <h4 class="h4class">Sophos Anti-Virus Software</h4>
+                <h4 class="h4class hoverable">Sophos Anti-Virus Software</h4>
               </li>
-
-
             </ul>
+
           </div>
+
         </div>
+
       </div>
+
     </div>
 
-    <div class="col-md">
-      <div class="row" style="padding-bottom: 10px;">
+    <div class="col-md animated fadeInRight">
+      <div class="row " style="padding-bottom: 10px;">
         <div class="col">
-          <img class="img-fluid" src="../../assets/MmongoDB-Logo.png">
-
+          <img class="img-fluid hoverable" src="../../assets/MmongoDB-Logo.png">
         </div>
       </div>
 
       <div class="row" style="padding-bottom: 10px;">
         <div class="col ">
-          <img class="img-fluid " src="../../assets/2000px-AmazonWebservices_Logo.svg.png">
+          <img class="img-fluid hoverable" src="../../assets/2000px-AmazonWebservices_Logo.svg.png">
         </div>
       </div>
 
       <div class="row" style="padding-bottom: 10px;">
         <div class="col">
-          <img class="img-fluid" src="../../assets/2000px-SAP_2011_logo.svg.png">
+          <img class="img-fluid hoverable" src="../../assets/2000px-SAP_2011_logo.svg.png">
         </div>
       </div>
 
 
-      <div class="row" style="padding-bottom: 10px;">
+      <!-- <div class="row" style="padding-bottom: 10px;">
         <div class="col">
           <img class="img-fluid" src="../../assets/2000px-Windows_Server_2016_logo.svg.png">
         </div>
-      </div>
+      </div> -->
 
       <div class="row" style="padding-bottom: 10px;">
           <div class="col">
-            <img class="img-fluid" src="../../assets/AngularJS_logo.svg.png">
+            <img class="img-fluid hoverable" src="../../assets/AngularJS_logo.svg.png">
           </div>
         </div>
 
         <div class="row" style="padding-bottom: 10px;">
             <div class="col">
-              <img class="img-fluid" src="../../assets/CSS3_and_HTML5_logos_and_wordmarks.svg.png">
+              <img class="img-fluid hoverable" src="../../assets/CSS3_and_HTML5_logos_and_wordmarks.svg.png">
             </div>
           </div>
 
