added new features and items

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -13,74 +13,74 @@
           <div class="col-md">
             <ul>
               <li>
-                <h4 class="h4class hoverable">HTML5 and CSS</h4>
+                <h4 class="h4class"><span class="rounded hoverable">HTML5 and CSS</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">SharePoint</h4>
+                <h4 class="h4class"><span class="rounded hoverable">SharePoint</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">SAP</h4>
+                <h4 class="h4class"><span class="rounded hoverable">SAP</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">SAP UI 5</h4>
+                <h4 class="h4class"><span class="rounded hoverable">SAP UI 5</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">Bootstrap</h4>
+                <h4 class="h4class"><span class="rounded hoverable">Bootstrap</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">AngularJS V1, V5, V6</h4>
+                <h4 class="h4class"><span class="rounded hoverable">AngularJS V1, V5, V6</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">NodeJS</h4>
+                <h4 class="h4class"><span class="rounded hoverable">NodeJS</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">MongooseJS</h4>
+                <h4 class="h4class"><span class="rounded hoverable">MongooseJS</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">Express</h4>
+                <h4 class="h4class"><span class="rounded hoverable">Express</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">JavaScript</h4>
+                <h4 class="h4class"><span class="rounded hoverable">JavaScript</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">MongoDB</h4>
+                <h4 class="h4class"><span class="rounded hoverable">MongoDB</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">Amazon AWS EC2</h4>
+                <h4 class="h4class"><span class="rounded hoverable">Amazon AWS EC2</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">Windows server 2016</h4>
+                <h4 class="h4class"><span class="rounded hoverable">Windows server 2016</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">IIS</h4>
+                <h4 class="h4class"><span class="rounded hoverable">IIS</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">JAVA</h4>
+                <h4 class="h4class"><span class="rounded hoverable">JAVA</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">Over four years of Microsoft Visual Studio experience.</h4>
+                <h4 class="h4class"><span class="rounded hoverable">Over four years of Microsoft Visual Studio experience.</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">BitBucket</h4>
+                <h4 class="h4class"><span class="rounded hoverable">BitBucket</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">GitHub</h4>
+                <h4 class="h4class"><span class="rounded hoverable">GitHub</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">Engineering software including AutoCAD and CATIA.</h4>
+                <h4 class="h4class"><span class="rounded hoverable">Engineering software including AutoCAD and CATIA.</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">DBAN</h4>
+                <h4 class="h4class"><span class="rounded hoverable">DBAN</span></h4>
               </li>
 
               <li>
-                <h4 class="h4class hoverable">JAMF Software Casper Management Suite</h4>
+                <h4 class="h4class"><span class="rounded hoverable">JAMF Software Casper Management Suite</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">Code42 CrashPlan server based backup</h4>
+                <h4 class="h4class"><span class="rounded hoverable">Code42 CrashPlan server based backup</span></h4>
               </li>
               <li>
-                <h4 class="h4class hoverable">Sophos Anti-Virus Software</h4>
+                <h4 class="h4class"><span class="rounded hoverable">Sophos Anti-Virus Software</span></h4>
               </li>
             </ul>
 
