--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<div class="container ">
-  <nav class="navbar fixed-top navbar-expand-sm navbar-dark elegant-color-dark  animated fadeInDown ">
+<nav class="navbar navbar-expand-sm navbar-dark   animated fadeInDown ">
     <a class="navbar-brand" href="">Nicholas Glenn</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
       aria-label="Toggle navigation">
@@ -52,6 +51,8 @@
     </div>
 
   </nav>
+<div class="container ">
+
 
   <!--/.Navbar-->
   <div class="routerPadding ">
