--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -101,7 +101,7 @@
 
       <div class="row" style="padding-bottom: 10px;">
         <div class="col ">
-          <img class="img-fluid hoverable" src="../../assets/2000px-AmazonWebservices_Logo.svg.png">
+          <img class="img-fluid hoverable bg-light rounded" src="../../assets/2000px-AmazonWebservices_Logo.svg.png">
         </div>
       </div>
 
@@ -126,7 +126,7 @@
 
         <div class="row" style="padding-bottom: 10px;">
             <div class="col">
-              <img class="img-fluid hoverable" src="../../assets/CSS3_and_HTML5_logos_and_wordmarks.svg.png">
+              <img class="img-fluid hoverable bg-light rounded" src="../../assets/CSS3_and_HTML5_logos_and_wordmarks.svg.png">
             </div>
           </div>
 
