--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,3 +1,9 @@
-<p>
-  work works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1 class="text-center animated fadeInDown">
+        <b>Work Experience</b>
+      </h1>
+    </div>
+  </div>
+</div>
