--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,9 @@
 /* footer{
     height: 100%
 } */
+body{
+    background-image: url("./assets/serverBackGround.jpg");
+    background-size: auto;
+    background-repeat: no-repeat;
+    height: 100%;
+}
