--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -4,9 +4,9 @@
       <div class="jumbotron animated zoomIn">
       <h1 class="text-center signature uppercase"><b> About This Site </b></h1>
       <br>
-      <h4><b>Welcome!</b> This is a personal website project of mine, which I use to try new web development techniques.
-        Im always working on a modification to improve the sight in some way.
-         The purpose of the sight is to show off some of my abilities in a format that is interactive and informative.
+      <h4><b>Welcome!</b> This is a personal website project of mine, which I use to experiment with new styles and techniques.
+        Im always working on different ways to improve this site.
+         The purpose of the sight is to show off some of my abilities and experience in a format that is interactive and informative.
          Feel free to contact me if you have any comments, questions, or feedback.
         <br>
         <p class="signature">Nicholas Glenn</p>
