--- a/src/app/education/education.component.html
+++ b/src/app/education/education.component.html
@@ -1,4 +1,11 @@
 <div class="container">
+    <div class="row">
+        <div class="col text-center">
+          <h1 class="text-center animated fadeInDown">
+            <b>Education</b>
+          </h1>
+        </div>
+      </div>
   <div class="row d-flex ">
     <div class="col-sm-6 animated fadeInLeft">
       <div class="card border-primary h-100 ">
