--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-sm navbar-dark   animated fadeInDown ">
-    <a class="navbar-brand" href="">Nicholas Glenn</a>
+<nav class="navbar navbar-expand-sm navbar-dark bg-transparent  animated fadeInDown ">
+    <a class="navbar-brand" routerLink="/about">Nicholas Glenn</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
       aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -7,35 +7,45 @@
 
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item" routerLinkActive="active">
+        <li class="nav-item itmHover" routerLinkActive="active">
           <a class="nav-link" routerLink="/about">Home</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+        <li class="nav-item itmHover" routerLinkActive="active">
           <a class="nav-link" routerLink="/education">
             <i class="fa fa-graduation-cap"></i> Education</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+        <li class="nav-item itmHover" routerLinkActive="active">
           <a class="nav-link" routerLink="/work">
             <i class="fa fa-briefcase"></i> Work Experience</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
+        <li class="nav-item itmHover" routerLinkActive="active">
           <a class="nav-link" routerLink="/skills">
             <i class="fa fa-pencil"></i> Skills</a>
         </li>
+        <li class="nav-item dropdown" routerLinkActive="active">
+          <a class="nav-link dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="fa fa-desktop"></i> Example Sites
+          </a>
+          <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item " routerLink="/examples/ecommerce" style="">eCommerce Example Site</a>
+            <a class="dropdown-item" routerLink="/examples/blog">Blog Example Site</a>
+          </div>
+        </li>
+        
 
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item" style="padding-right:15px;">
+        <li class="nav-item itmHover" style="padding-right:15px;">
               <a class="nav-link" href="https://www.linkedin.com/in/nicholas-glenn-98b289106" target="_blank" >
                 <i class="fa fa-linkedin fa-2x lnpad white-text" aria-hidden="true"></i>
               </a>
         </li>
-        <li style="padding-right:15px;">
+        <li class="nav-item itmHover" style="padding-right:15px;">
           <a class="nav-link" href="mailto:glennn@mail.gvsu.edu" target="">
             <i class="fa fa-envelope fa-2x lnpad white-text" aria-hidden="true"></i>
           </a>
         </li>
-          <li style="padding-right:0px;">
+          <li class="nav-item itmHover" style="padding-right:0px;">
           <a class="nav-link" href="https://github.com/nglenn8566" target="_blank">
             <i class="fa fa-github fa-2x lnpad white-text" aria-hidden="true"></i>
           </a>
@@ -51,6 +61,7 @@
     </div>
 
   </nav>
+
 <div class="container ">
 
 
