--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,7 @@ body{
     background-repeat: no-repeat;
     height: 100%;
 }
+
+h1{
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
