bug fixes and changes

--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -6,4 +6,191 @@
       </h1>
     </div>
   </div>
+
+
+  <div class="row black-text">
+    <div class="col">
+      <div class="jumbotron">
+        <div class="media">
+          <div class="row">
+            <div class="col-md-2">
+              <div class="media-left">
+                <a href="http://www.safholland.com" target="_blank">
+                  <img class="img-fluid rounded" src="../../assets/saf-logo1.jpg" style="width: 150px;">
+                </a>
+                <p class="dates text-center">April 2017-Current</p>
+              </div>
+            </div>
+            <div class="col-md">
+              <div class="media-body">
+                <h2 class="media-heading">SAF-Holland</h2>
+                <h4 class="h4pad">Web Development Intern</h4>
+                <ul>
+                  <li class="listItem">
+                    <p class="info">Implemented DevOps using Bitbucket and Slack for the Web Development team.</p>
+                  </li>
+                  <li class="listItem">
+                    <p class="info">Designed and implemented dynamic Content Management Systems for customer facing websites</p>
+                  </li>
+                  <li class="listItem">
+                    <p class="info">Developed and supported multiple global external facing websites including e-commerce sites.</p>
+                  </li>
+                  <li class="listItem">
+                    <p class="info">Managed multiple JSON databases.</p>
+                  </li>
+                  <li class="listItem">
+                    <p class="info">Resolved IT Helpdesk tickets assigned to the Web Development team.</p>
+                  </li>
+                  <li class="listItem">
+                    <p class="info">Migrated data to and from MongoDB.</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="row black-text">
+    <div class="col">
+      <div class="jumbotron">
+        <div class="media">
+          <div class="row">
+            <div class="col-md-2">
+              <div class="media-left text-center">
+                <a href="http://www.gvsu.edu/it/helpdesk/" target="_blank">
+                  <img class="img-fluid rounded" src="../../assets/gvsusport.png" style="width: 150px; border: none;">
+                </a>
+                <p class="dates text-center">Jan 2017-May 2017</p>
+              </div>
+            </div>
+            <div class="col-md">
+              <div class="media-body">
+                <h2 class="media-heading">Grand Valley State University IT Helpdesk</h2>
+                <h4 class="h4pad">IT Student Tech</h4>
+                <ul>
+                  <li class="listItem">
+                    <p class="info">Manage computer labs on campus.</p>
+                  </li>
+                  <li class="listItem">
+                    <p class="info">Resolve IT Helpdesk tickets.</p>
+                  </li>
+                  <li class="listItem">
+                    <p class="info">Provide IT support to students and faculty.</p>
+                  </li>
+                  <li class="listItem">
+                    <p class="info">Manage and maintain classroom and lab equipment.</p>
+                  </li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="row black-text">
+    <div class="col">
+      <div class="jumbotron">
+        <div class="media">
+          <div class="row">
+            <div class="col-md-2">
+              <div class="media-left">
+                <a href="https://oakland.edu/medicine/" target="_blank">
+                  <img class="img-fluid rounded-circle" src="../../assets/ouwb.jpg" style="width: 150px;">
+                </a>
+                <p class="dates text-center">April 2016 - <br>August 2016</p>
+              </div>
+            </div>
+            <div class="col-md">
+              <div class="media-body">
+                <h2 class="media-heading">Oakland Univeristy William Beaumont School Of Medicine</h2>
+                <h4 class="h4pad">Technologist</h4>
+                <ul>
+                  <li>
+                    <p class="info">Developed a method to take physical inventory of all electronic assets for the School of Medicine.</p>
+                  </li>
+                  <li>
+                    <p class="info">Worked with Apple Care to manage hardware issues covered under warranty.</p>
+                  </li>
+                  <li>
+                    <p class="info">Assisted staff, faculty and students with computer issues.</p>
+                  </li>
+                  <li>
+                    <p class="info">Loaded a custom image onto 130 new MacBook Pros using Casper Management Suite.</p>
+                  </li>
+                  <li>
+                    <p class="info">Use of JAMF Software’s Casper Management Suite to manage Apple computers.</p>
+                  </li>
+                  <li>
+                    <p class="info">Utilization of Code42 CrashPlan to backup and recover data on staff, faculty and student devices.</p>
+                  </li>
+                  <li>
+                    <p class="info">Erasing hard drives to a Department of Defense standard using Darik’s Nuke And Boot (DBAN).</p>
+                  </li>
+                  <li>
+                    <p class="info">Removal of viruses and malware from staff, faculty and student devices.</p>
+                  </li>
+                  <li>
+                    <p class="info">Installation of anti-virus software on school devices. </p>
+                  </li>
+                  <li>
+                    <p class="info">Maintenance of classroom equipment.</p>
+                  </li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="row black-text">
+    <div class="col">
+      <div class="jumbotron">
+        <div class="media">
+          <div class="row">
+            <div class="col-md-2">
+              <div class="media-left">
+                <a href="http://www.timhortons.com/ca/en/index.php" target="_blank">
+                  <img class="img-fluid rounded-circle" src="../../assets/timmyh.png" style="width: 150px;">
+                </a>
+                <p class="dates text-center">June 2014 - <br>June 2015</p>
+              </div>
+            </div>
+            <div class="col-md">
+              <div class="media-body">
+                <h2 class="media-heading">Tim Hortons</h2>
+                <h4 class="h4pad">Team Member</h4>
+                <ul>
+                  <li class="listItem">
+                    <p class="info">Responsible for serving customers, utilizing POS systems and maintain product levels.</p>
+                  </li>
+                  <li class="listItem">
+                    <p class="info">Coordinated the nightly close process including cash management and security systems.</p>
+                  </li>
+                  <li class="listItem">
+                    <p class="info">Worked 30 hours per week while enrolled as a full-time student at Oakland University.</p>
+                  </li>
+
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
 </div>
